--- a/hortalizas.html
+++ b/hortalizas.html
@@ -11,7 +11,7 @@
     <!-- iconos de fontawesome -->
     <script src="https://kit.fontawesome.com/562d327e55.js" crossorigin="anonymous"></script>
     <!-- favicon -->
-    <link rel="shortcut icon" href="/img/logoOrganicos.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logoOrganicos.png" type="image/x-icon">
 </head>
 <body>
  
@@ -21,7 +21,7 @@
       <div class="container-fluid">
         <!-- logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="/img/logoOrganicos.jpg" alt="" id="logo">
+            <img src="/img/logoOrganicos.png" alt="" id="logo">
             <img src="/img/Orgánicos.png" alt="" id="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
