--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="container-fluid">
       <!-- logo -->
       <a class="navbar-brand" href="index.html">
-          <img src="/img/logoOrganicos.png" alt="" id="logo">
-          <img src="/img/Orgánicos.png" alt="" id="logo">
+          <img src="/img/logoOrganicos.png" alt="" id="logo" />
+          <img src="/img/Orgánicos.png" alt="" id="logo" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
