--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- iconos de fontawesome -->
     <script src="https://kit.fontawesome.com/562d327e55.js" crossorigin="anonymous"></script>
     <!-- favicon -->
-    <link rel="shortcut icon" href="img/logoorganicos.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
 
