--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
         <!-- logo -->
         <a class="navbar-brand" href="index.html">
             <img src="/img/logo.png" alt="" id="logo">
-            <img src="/img/organicos.png" alt="" id="logo">
+            <img src="/img/organicos.png" alt="" id="logo1">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
