--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <!-- iconos de fontawesome -->
     <script src="https://kit.fontawesome.com/562d327e55.js" crossorigin="anonymous"></script>
     <!-- favicon -->
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -20,8 +20,8 @@
       <div class="container-fluid">
         <!-- logo -->
         <a class="navbar-brand" href="index.html">
-            <img src="/img/logo.png" alt="" id="logo">
-            <img src="/img/organicos.png" alt="" id="logo1">
+            <img src="img/logo.png" alt="" id="logo">
+            <img src="img/organicos.png" alt="" id="logo1">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -117,7 +117,7 @@
         <div class="ftcontainer">
           <div class="footer__menu">
             <figure>
-              <img src="/img/organicof.png" alt="" class="footer__logo">
+              <img src="img/organicof.png" alt="" class="footer__logo">
             </figure>
             <br>
             <p class="ft-social-row">
